MSPSDS-887 fix: scrollbar width adjustment in header and footer

--- a/mspsds-web/app/assets/application/stylesheets/main.scss
+++ b/mspsds-web/app/assets/application/stylesheets/main.scss
@@ -18,19 +18,16 @@
   box-sizing: border-box;
 }
 
-
-
-body {
+.scrollbar-adjust  {
   // This block prevents content moving when hiding/displaying the scrollbar in the browser
-  @media screen and (min-width: 960px) {
-    header,
-    footer {
-      // Ensures that header and footer background colours fill width of screen
-      margin-left: -20px;
-    }
-    // Shifts content of body to right by width of scrollbar
-    padding-left: calc(100vw - 100%);
+  header,
+  footer {
+    // Ensures that header and footer background colours fill width of screen
+    margin-left: -20px;
+    padding-left: 20px;
   }
+  // Shifts content of body to right by width of scrollbar
+  padding-left: calc(100vw - 100%);
 }
 
 @media print {
